# YouTubeSummarizer

./: .env  .env.example  .gitignore  README.md  llm_endpoint.py  main.py  pyproject.toml  requirements.txt  video_cache.py  video_chatbot.py
tools/: yt_transcript.py
video_cache/: .gitkeep  0da30fe4908b84faec7560fdb82784b1_data.pkl  5e9d8583503768c33285f1779e92c737_chat.pkl  5e9d8583503768c33285f1779e92c737_data.pkl
